--- a/anerp/templates/layout.html
+++ b/anerp/templates/layout.html
@@ -21,7 +21,10 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="{{ url_for('static', filename='libs/font-awesome4/css/font-awesome.min.css') }}">
-  {% assets "css_all" %}
+
+  {% assets filters="cssmin", output="public/css/common.css",
+      "libs/bootstrap/dist/css/bootstrap.css",
+      "css/style.css" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
   {% endassets %}
 
@@ -61,9 +64,13 @@
 {% include "footer.html" %}
 
 <!-- JavaScript at the bottom for fast page loading -->
-{% assets "js_all" %}
-    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+{% assets filters="jsmin", output="public/js/common.js",
+    "libs/jQuery/dist/jquery.js",
+    "libs/bootstrap/dist/js/bootstrap.js",
+    "js/plugins.js" %}
+  <script type="text/javascript" src="{{ ASSET_URL }}"></script>
 {% endassets %}
+
 {% block js %}{% endblock %}
 <!-- end scripts -->
 {% endblock %}
